<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"

            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                >

                <RadioButton
                    android:id="@+id/radioButton_Credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/Credit"
                    android:checked="true"

                    />

                <RadioButton
                    android:id="@+id/radioButton_Hypothec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/Hypothec"
                    />
            </RadioGroup>


            <TextView
                android:id="@+id/textView_sum_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sum_credit"
                android:focusable="true"

                />

            <EditText
                android:id="@+id/editText_sum_credit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:textColor="@color/colorWhite"
                android:singleLine="true"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/shadowColor"
                android:shadowRadius="1"
                android:textCursorDrawable="@null"
                />
            <TextView
                android:id="@+id/error_sum_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indicate__sum_credit"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_light"/>


            <TextView
                android:id="@+id/textView_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribution"
                android:visibility="gone"
              />

            <EditText
                android:id="@+id/editText_contribution"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:visibility="gone"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/shadowColor"
                android:shadowRadius="1"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                />

            <TextView
                android:id="@+id/error_contribution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indicate_contribution"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"
                />



            <TextView
                android:id="@+id/textView_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest_rate" />

            <EditText
                android:id="@+id/editText_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="@color/shadowColor"
                android:shadowRadius="1"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                />
            <TextView
                android:id="@+id/error_interest_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indicate_interest_rate"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView_loan_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_terms" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_value_seeBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_view_Mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/Mes" />

            </LinearLayout>


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:min="0"
                android:max="120"
                android:progressTint="@color/colorWhite"
                android:thumbTint="@color/colorWhite"
                />

            <TextView
                android:id="@+id/error_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/indicate_seek_bar"
                android:textColor="@android:color/holo_red_light"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/text_view_type_of_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/type_of_payment" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radioButton_Annuit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Annuit"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/radioButton_Diff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Diff" />
                </RadioGroup>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_help_1"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_help" />

                    <ImageView
                        android:id="@+id/imageView_help_2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_help" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_2"
            android:gravity="center"
            android:text="@string/button_clear"
            android:textColor="@color/colorBlack"
            />

        <Button
            android:id="@+id/button_calc"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_2"
            android:gravity="center"
            android:text="@string/button_calc"
            android:textColor="@color/colorBlack" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>